[tool.poetry]
name = "bsky-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
curl-cffi = "^0.7.3"
pydantic = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
