[tool.poetry]
name = "bsky-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
curl-cffi = "^0.7.3"
pydantic = "^2"
pydantic-settings = "^2.6.1"

[tool.poetry.dev-dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
